--- a/day1/attribute-selector.html
+++ b/day1/attribute-selector.html
@@ -2,20 +2,21 @@
 <html lang="en">
   <head>
     <title>Attribute selector</title>
-
     <style>
       a[href] {
-        color: #577f00;
+        color: blueviolet;
       }
 
       p {
-        color: #9fdf15;
+        color: #b5bb4a;
       }
     </style>
   </head>
   <body>
-    <a href="https://www.google.com.sg/"> Google</a>
+    <a href="https://www.google.com">Google</a>
     <a>Facebook</a>
     <a>X</a>
+
+    <p>Ini paragraph</p>
   </body>
 </html>
