--- a/day1/index.html
+++ b/day1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Day1 Frontend</title>
+    <title>Day 1 Frontend</title>
   </head>
   <body>
     <!-- HEADING TAGS -->
@@ -16,16 +16,16 @@
   <!-- PARAGRAPH & BREAK -->
   <p>Ini adalah paragraph</p>
   <hr />
+  <p>
+    Ini adalah <br />
+    paragraph
+  </p>
 
-  <p>Ini adalah <br />paragraph</p>
-
-  <!-- TEXT FORMATING -->
-
+  <!-- TEXT FORMATTING -->
   <b>Ini Bold</b>
-  <strong>Ini adalah Strong</strong>
+  <strong>Ini Strong</strong>
   <p>
     Kucing
-
     <sup>2</sup>
     <!-- <sub>1</sub> -->
   </p>
@@ -36,29 +36,21 @@
     <li>Beras</li>
     <li>Minyak</li>
     <li>Gula</li>
-    <li>Santen</li>
+    <li>Santan</li>
   </ul>
 
-  <!-- ORDER LIST -->
-
+  <!-- ORDERED LIST -->
   <h1>Daftar Belanja</h1>
+  <!-- <ol type="a"> -->
   <ol>
     <li>Beras</li>
     <li>Minyak</li>
     <li>Gula</li>
-    <li>Santen</li>
-  </ol>
-  <!-- Urutan huruf -->
-  <h1>Daftar Belanja</h1>
-  <ol type="A">
-    <li>Beras</li>
-    <li>Minyak</li>
-    <li>Gula</li>
-    <li>Santen</li>
+    <li>Santan</li>
   </ol>
 
   <!-- TABLE -->
-  <table border="1">
+  <table>
     <tr>
       <th>No</th>
       <th>Nama</th>
@@ -66,61 +58,53 @@
     </tr>
     <tr>
       <td>1</td>
-      <td>joko</td>
-      <td>joko@MAIL.COM</td>
+      <td>Budi</td>
+      <td>budi@mail.com</td>
     </tr>
     <tr>
       <td>2</td>
-      <td>Budi</td>
-      <td>Budi@MAIL.COM</td>
+      <td>Joko</td>
+      <td>joko@mail.com</td>
     </tr>
     <tr>
       <td>3</td>
-      <td>siti</td>
-      <td>siti@MAIL.COM</td>
+      <td>Siti</td>
+      <td>siti@mail.com</td>
     </tr>
   </table>
 
   <!-- ANCHOR TAG -->
-
-  <a href="https://purwadhika.com/" target="_blank"> Link purwadhika bos</a>
+  <!-- ABSOLUTE LINK -->
+  <a href="https://www.google.com" target="_blank">Link Google brooh</a>
 
   <!-- RELATIVE LINK -->
-
   <a href="profile.html">Profile</a>
 
-  <!-- Image tag -->
-
+  <!-- IMAGE TAG -->
   <!-- <img
-    src="https://images.unsplash.com/photo-1547425260-76bcadfb4f2c?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-    alt="Ini gambar jonas kakaroto"
+    src="https://images.unsplash.com/photo-1547425260-76bcadfb4f2c?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+    alt="Ini gambar Jonas Kakaroto"
     width="100%"
   />
+  <img src="picture.avif" alt="Ini gambar thumbnail" width="100%" /> -->
 
-  <img
-    src="jonas-kakaroto-KIPqvvTOC1s-unsplash.jpg"
-    alt="ini jonas"
-    width="100%"
-  /> -->
-
-  <form action="">
-    <input type="text" /> <br />
-    <input type="number" /> <br />
-    <input type="button" /> <br />
-    <input type="checkbox" /> <br />
-    <input type="date" /> <br />
+  <!-- FORM -->
+  <form>
+    <input type="text" />
+    <input type="number" />
+    <input type="password" />
+    <input type="checkbox" />
+    <input type="date" />
     <input type="radio" name="radio1" />
-    <input type="radio" name="radio1" /> <br />
+    <input type="radio" name="radio1" />
     <textarea maxlength="200"></textarea>
   </form>
 
   <!-- BUTTON -->
-
   <button type="button">Save</button>
   <button type="submit">Submit</button>
 
   <!-- SELECT OPTION -->
-
   <select>
     <option>Merah</option>
     <option>Biru</option>
@@ -128,6 +112,11 @@
   </select>
 
   <!-- DIVISION TAG -->
+  <div style="border: 1px solid red; padding: 10px; margin-top: 10px">
+    <input type="text" />
+    <input type="password" />
+    <button type="button">Login</button>
+  </div>
 
   <div style="border: 1px solid red; padding: 10px; margin-top: 10px">
     <input type="text" />
