--- a/day1/pseudo.html
+++ b/day1/pseudo.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pssudo classdi</title>
+    <title>Pseudo class</title>
     <style>
       .konten {
-        background-color: aqua;
+        background-color: red;
         height: 200px;
       }
+
       .konten:hover {
-        background-color: bisque;
+        background-color: aqua;
       }
     </style>
   </head>
   <body>
-    <div class="konten">konten</div>
+    <div class="konten">Konten</div>
   </body>
 </html>
