--- a/day1/selector.html
+++ b/day1/selector.html
@@ -4,26 +4,26 @@
     <title>Selector</title>
 
     <style>
-      /* universal selector//  mauk ujian */
+      /* universal selector */
+
       * {
         margin: 0;
         padding: 0;
       }
-      /* element selector */
 
+      /* element selector */
       h2 {
         color: red;
       }
+
       /* id selector */
       #avanza {
         color: blue;
       }
 
-      /* class selector
-      !importent diprioritaskan walaupun inline styles lebih prioritas //keluar ujian
-      semua style ngak cuma di warna */
+      /* class selector */
       .mobil {
-        color: rgb(0, 128, 9) !important;
+        color: purple !important;
       }
     </style>
   </head>
@@ -31,7 +31,7 @@
     <h2>SELECTOR</h2>
 
     <p id="avanza">Ini Avanza</p>
-    <p class="mobil">Ini Avanza</p>
-    <p class="mobil" style="color: brown">Ini Pajero</p>
+    <p class="mobil">Ini Mobilio</p>
+    <p class="mobil" style="color: red">Ini Pajero</p>
   </body>
 </html>
