--- a/day1/external-style.html
+++ b/day1/external-style.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>External Styles</title>
+    <title>External Style</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Ini adalah external style</h1>
+    <h1>Ini Adalah External Style</h1>
   </body>
 </html>
