--- a/day1/font-text.html
+++ b/day1/font-text.html
@@ -5,19 +5,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
     <style>
       p {
-        font-family: "Permanent Marker", cursive;
-        font-weight: 400;
+        font-family: "Poppins", sans-serif;
+        font-weight: 100;
         font-style: normal;
-        font-size: 70px;
       }
     </style>
   </head>
   <body>
-    <p>Hai kamu</p>
+    <p>Hai Kamu!</p>
   </body>
 </html>
