--- a/day1/inline-style.html
+++ b/day1/inline-style.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Inline style</title>
+    <title>Inline Style</title>
   </head>
   <body>
-    <p style="color: red; font-size: 70px">Hallo dunia!</p>
+    <p style="color: red; font-size: 70px">Halo Dunia!</p>
   </body>
 </html>
