--- a/day1/internal-style.html
+++ b/day1/internal-style.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Internal style</title>
+    <title>Internal Style</title>
     <style>
       p {
         color: red;
       }
 
       h1 {
-        color: pink;
+        color: blue;
       }
     </style>
   </head>
@@ -17,6 +17,6 @@
     <p>Ini paragraph 2</p>
     <p>Ini paragraph 3</p>
 
-    <h1>Ini haeading 1</h1>
+    <h1>Ini Heading 1</h1>
   </body>
 </html>
