--- a/day1/margin-padding.html
+++ b/day1/margin-padding.html
@@ -6,7 +6,7 @@
     <title>Margin Padding</title>
     <style>
       .konten {
-        border: 1px solid rgb(252, 5, 5);
+        border: 1px solid black;
         width: 200px;
         height: 150px;
         padding: 10px;
