--- a/day1/profile.html
+++ b/day1/profile.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
     <h1>INI PAGE PROFILE</h1>
-    <a href="index.html">ini untuk kembali</a>
+
+    <a href="index.html">Home</a>
   </body>
 </html>
