--- a/day1/width-height.html
+++ b/day1/width-height.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Width & Height</title>
-
     <style>
       .konten {
-        background-color: aqua;
-        height: 600px;
+        background-color: aquamarine;
+        height: 200px;
         width: 100%;
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div class="konten">Ini Konten</div>
+  </body>
 </html>
